--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -18,6 +18,10 @@ html, body{
 	overflow: hidden;
 }
 
+input:focus{
+	box-shadow: inset 0 0 5px 1px var(--red-orange-color)
+}
+
 /*
 
 --------------------------------------------------
@@ -104,7 +108,7 @@ main div.TrackPanel p.TrackDuration{
 
 main div.TrackPanel div.TrackVolume{
 	display: inline-block;
-    margin-left: 230px;
+    margin-left: 150px;
 }
 main div.TrackPanel div.TrackVolume div.TrackVolumeSlider{
     display: inline-block;
